--- a/src/app/partials/main/main.component.html
+++ b/src/app/partials/main/main.component.html
@@ -1,3 +1,7 @@
 <div class="body" [ngClass]="sizeClass()">
-    <router-outlet />
+    <div class="container">
+        <div class="frame">
+            <router-outlet />
+        </div>
+    </div>
 </div>
