--- a/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
+++ b/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
@@ -1,24 +1,5 @@
-.product-container {
-    padding-top: 6rem;
-    width: 55rem;
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.product-frame {
-    padding: 1.5rem;
-    border-radius: 1rem;
-    background-color: #1b0020bb;
-    box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
-    min-height: 67rem;
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-}
-
-.breadcrumbs {
-    margin-top: 0;
+h2 {
+    justify-self: left;
 }
 
 .product {
@@ -63,176 +44,110 @@
     .message-section {
         position: relative;
     }
+
     h4 {
         margin-top: 2rem;
         margin-bottom: 0;
     }
-    label {
-        display: flex;
-        flex-direction: column;
-        row-gap: 0.3rem;
-    }
-    .rating-label {
-        width: 5rem;
-    }
-    .message-label {
-        width: 100%;
-        // max-width: 95%;
-        textarea {
-            height: 6rem;
-            padding: 0.5rem;
-        }
-    }
+    
     .buttons {
         position: absolute;
         bottom: 0;
         right: 0;
         display: none;
     }
+
     .posting {
         display: flex;
 
         .add {
             border-top-left-radius: 1rem;
         }
+
         .cancel {
             border-bottom-right-radius: 1rem;
         }
     }
-    button {
-        width: fit-content;
-        padding: 0.5rem 2rem 0.5rem 2rem;
-        cursor: pointer;
-        white-space: nowrap;
-        background-color: rgba(255, 217, 0, 0.253);
-        border: none;
-        color: #fff;
-        height: 2rem;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: rgba(255, 217, 0, 0.397);
-        }
-
-        &:active {
-            background-color: rgba(255, 217, 0, 0.685);
-        }
-    }
-    input {
-        line-height: 1.2rem;
-        text-align: center;
-    }
-    input,
-    textarea {
-        font-size: 1rem;
-        background-color: #1b00205d;
-        color: #fff;
-        border: 1px ridge gold;
-        border-radius: 1rem;
-    }
 }
 
-.pagination-controls {
-    max-width: 220px;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 3rem;
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    white-space: nowrap;
-    height: 2rem;
-    border-radius: 1rem;
-    box-shadow: 0.063rem 0 1.25rem 0 gold;
-
-    button {
-        flex: 1;
-        cursor: pointer;
-        background-color: rgba(255, 217, 0, 0.253);
-        border: none;
-        color: #fff;
-        height: 2rem;
+.review {
+    width: 100%;
+    .image-holder {
+        width: 75%;
+      
+        border-radius: 50%;
         display: flex;
         justify-content: center;
-        align-items: center;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: rgba(255, 217, 0, 0.397);
-        }
-
-        &:active {
-            background-color: rgba(255, 217, 0, 0.685);
+        align-items: end;
+        img {
+            width: 75%;
+            height: auto;
         }
     }
 
-    p {
-        height: 2rem;
-        padding: 0 1rem 0 1rem;
+    .header-desc {
+        grid-area: 1/2/2/3;
+        margin-top: 3rem;
 
+        h4, p {
+            margin: 0;
+        }
+        h4 {
+            margin-bottom: 1rem;
+        }
+        
+    }
+
+    .actions {
+        grid-area: 2/2/3/3;
+        width: 100%;
         display: flex;
         align-items: center;
-
-        background-color: rgba(255, 217, 0, 0.253);
-        border-left: none;
-        border-right: none;
+        column-gap: 1rem;
+        small {
+            margin-left: auto;
+        }
     }
 
-    .previous {
+    .delete-review {
         border-top-left-radius: 1rem;
-        border-bottom-left-radius: 1rem;
-    }
-
-    .next {
-        border-top-right-radius: 1rem;
         border-bottom-right-radius: 1rem;
     }
 }
 
-.loading-reviews {
-    align-self: center;
-}
-
-.reviews {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column-reverse;
-    row-gap: 2rem;
-    article {
-        padding: 0.5rem 2rem 0.5rem 2rem;
-        background-color: #1b0020de;
-        border: 1px ridge gold;
-        border-radius: 1rem;
-    }
-    div {
+@media screen and (max-width: 700px) {
+    .item {
         display: flex;
-        justify-content: right;
+        flex-direction: column;
         align-items: center;
-        column-gap: 1rem;
-    }
-    .timestamp {
-        font-size: 0.7rem;
-    }
-    .delete-review {
-        width: fit-content;
-        padding: 0.5rem 2rem 0.5rem 2rem;
-        cursor: pointer;
-        white-space: nowrap;
-        background-color: rgba(255, 217, 0, 0.253);
-        border: none;
-        color: #fff;
-        height: 2rem;
-        border-radius: 1rem;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: rgba(255, 217, 0, 0.397);
+        
+        .image-holder {
+            width: 40%;
+            max-width: 100px;
         }
 
-        &:active {
-            background-color: rgba(255, 217, 0, 0.685);
+        .header-desc {
+            margin-top: 0;
+            h4 {
+                text-align: center;
+            }
+            p {
+                text-align: center;
+            }
+        }
+
+        .actions {
+            display: flex;
+            flex-direction: column;
+            row-gap: 1rem;
+            small {
+                margin: 0;
+            }
+
+            .delete-review {
+                width: 100%;
+                border-top-left-radius: 0;
+            }
         }
     }
 }
