--- a/src/app/pages/cafe-menu/cafe-menu.component.html
+++ b/src/app/pages/cafe-menu/cafe-menu.component.html
@@ -1,57 +1,44 @@
-<nav class="category-nav">
-    <h2>Kategorier</h2>
-
-    <ul class="category-list" [class.disabled]="isLoading()" [ngClass]="isCategoriesDown() ? '' : 'closed'">
-        @for (category of categories(); track category.id) {
-        <li class="item" [ngClass]="activeCategorySlug() === category.name.slug ? 'active' : ''"
-            (click)="navigateToCategory(category)" tabindex="0">
-            {{category.name.normal}}
-        </li>
-        }
-    </ul>
-    <button class="button close-btn" (click)="toggleCategoriesList()">
-        @if (isCategoriesDown()) {
-        <i class="fa-solid fa-chevron-up"></i>
-        } @else {
-        <i class="fa-solid fa-chevron-down"></i>
-        }
+<h2>Meny</h2>
+<div class="pagination-controls">
+    <button class="previous" (click)="previous()">
+        <i class="fa-solid fa-arrow-left"></i>
     </button>
-</nav>
-
-<div class="products-container">
-    <div class="products-frame">
-        <h3>Meny</h3>
-        @if (isLoading()) {
-        <div class="loading-products">
-            Laddar produkter...
-        </div>
-        } @else {
-        <div class="products-list-div">
-            @for (item of products(); track item.id) {
-            <article class="item" (click)="productDetails(item)" [title]="setTitle(item.name.normal)">
-                <div class="price">{{item.price}} SEK</div>
-                <div class="image-holder">
-                    <img src="defaultimage.jpg" width="100" height="100">
-                </div>
-                <div class="header-desc">
-                    <h4>{{item.name.normal}}</h4>
-                    <p class="description">{{item.description}}</p>
-                </div>
-                <p class="rating">
-                    {{setRating(item.rating)}}
-                </p>
-            </article>
-            }
-        </div>
-        }
-        <div class="pagination-controls">
-            <button class="previous" (click)="previous()">
-                <i class="fa-solid fa-arrow-left"></i>
-            </button>
-            <p>Sida {{pagination().currentPage}} av {{pagination().totalPages}}</p>
-            <button class="next" (click)="next()">
-                <i class="fa-solid fa-arrow-right"></i>
-            </button>
-        </div>
+    <p>Sida {{pagination().currentPage}} av {{pagination().totalPages}}</p>
+    <button class="next" (click)="next()">
+        <i class="fa-solid fa-arrow-right"></i>
+    </button>
+</div>
+<div class="normal-list">
+    <div class="filter">
+        <label>
+            <span>Kategori:</span>
+            <select name="categories-select" [(ngModel)]="activeCategorySelection" (change)="navigate()">
+                <option value="" [selected]="activeCategorySlug() === ''">Alla</option>
+                @for (category of categories(); track category.id) {
+                <option [value]="category.name.slug">{{category.name.normal}}</option>
+                }
+            </select>
+        </label>
     </div>
+    @if (isLoading()) {
+    <div class="loading">
+        Laddar produkter...
+    </div>
+    } @else {
+    @for (item of products(); track item.id) {
+    <article class="item" (click)="productDetails(item)" [title]="setTitle(item.name.normal)">
+        <div class="price">{{item.price}} SEK</div>
+        <div class="image-holder">
+            <img src="defaultimage.jpg" width="100" height="100">
+        </div>
+        <div class="header-desc">
+            <h3>{{item.name.normal}}</h3>
+            <p class="description">{{item.description}}</p>
+        </div>
+        <p class="rating">
+            {{setRating(item.rating)}}
+        </p>
+    </article>
+    }
+    }
 </div>
