--- a/src/app/pages/cafe-menu/cafe-menu.component.scss
+++ b/src/app/pages/cafe-menu/cafe-menu.component.scss
@@ -1,145 +1,9 @@
-%reset-list-style {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.category-nav {
-    position: fixed;
-    right: 2rem;
-    z-index: 10;
-    padding: 0.5rem;
-    text-align: center;
-    background-color: #1b0020;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
-    width: 14rem;
-    
-    h2 {
-        margin: 0;
-        margin-top: 0.5rem;
-    }
-}
-
-.category-list {
-    @extend %reset-list-style;
-    display: flex;
-    flex-direction: column;
-
-    .item {
-        padding: 1rem 3rem 1rem 3rem;
-        border-radius: 1rem;
-        color: #e6e6e67a;
-        cursor: pointer;
-        user-select: none;
-        transition: background-color 0.1s ease-in-out;
-
-        &:hover {
-            background-color: #37003c;
-            color: #e6e6e6;
-        }
-    }
-}
-
-.category-list.disabled {
-    opacity: 0.5;
-    pointer-events: none;
-}
-
-.active {
-    font-weight: 700;
-    background-color: #37003c;
-    color: #e6e6e6 !important;
-}
-
-.button {
-    margin-top: 0.5rem;
-    padding: 0.5rem;
-    background-color: transparent;
-    color: #fff;
-    width: 100%;
-
-    border: 0;
-    cursor: pointer;
-}
-
-.closed {
-    display: none;
-}
-
-.products-container {
-    padding-top: 6rem;
-    width: 55rem;
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.products-frame {
-    padding: 1.5rem;
-    border-radius: 1rem;
-    background-color: #1b0020bb;
-    box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
-    min-height: 67rem;
-}
-
-.products-list-div {
-    min-height: 58rem;
-    max-height: 58rem;
-    overflow-y: auto;
-
-    .item {
-        cursor: pointer;
-        display: grid;
-        grid-template-columns: 100px auto;
-        background-color: #1b002000;
-        gap: 0.5rem;
-        position: relative;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: #201d002a;
-        }
-    }
-}
-
-.products-list-div::-webkit-scrollbar {
-    display: none;
-}
-
-.loading-products {
-    min-height: 58rem;
-    max-height: 58rem;
-    text-align: center;
-}
-
-h3 {
-    justify-self: center;
-}
-
-.image-holder {
-    grid-area: 1/1/2/2;
-    max-width: 100px;
-    aspect-ratio: 1/1;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 1rem;
-
-    img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-.header-desc {
-    grid-area: 1/2/2/3;
-    padding: 0rem 1rem 0rem 1rem;
-}
-
 .rating {
-    grid-area: 2/1/3/2;
-    font-size: 1.4rem;
+    grid-area: 2/1/3/3;
+    font-size: 1.3rem;
     color: gold;
+    margin: 0;
+    margin: 0.5rem;
 }
 
 .price {
@@ -152,90 +16,44 @@ h3 {
     box-shadow: 0.063rem 0 1.25rem 0 gold;
 }
 
-.pagination-controls {
-    max-width: 220px;
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    white-space: nowrap;
-    height: 2rem;
-    border-radius: 1rem;
-    box-shadow: 0.063rem 0 1.25rem 0 gold;
-
-    button {
-        flex: 1;
-        cursor: pointer;
-        background-color: rgba(255, 217, 0, 0.253);
-        border: none;
-        color: #fff;
-        height: 2rem;
+@media screen and (max-width: 700px) {
+    .item {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: rgba(255, 217, 0, 0.397);
-        }
-
-        &:active {
-            background-color: rgba(255, 217, 0, 0.685);
-        }
-    }
-
-    p {
-        height: 2rem;
-        padding: 0 1rem 0 1rem;
-        display: flex;
+        flex-direction: column;
         align-items: center;
 
-        background-color: rgba(255, 217, 0, 0.253);
-        border-left: none;
-        border-right: none;
-    }
-
-    .previous {
-        border-top-left-radius: 1rem;
-        border-bottom-left-radius: 1rem;
-    }
-
-    .next {
-        border-top-right-radius: 1rem;
-        border-bottom-right-radius: 1rem;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .products-list-div {
-        .item {
-            display: flex;
-            flex-direction: column;
+        .price {
+            position: relative;
+            top: 0;
+            right: 0;
+            align-self: flex-end;
         }
-    }
 
-    .image-holder {
-        margin: 0 auto;
-    }
+        .image-holder {
+            margin: 0;
+            margin-top: 1rem;
+        }
 
-    .header-desc {
-        padding: 0;
-        margin: 0 auto;
-    }
+        .header-desc {
+            margin-top: 0;
+            padding-top: 0;
+            h3 {
+                text-align: center;
+            }
+            p {
+                text-align: center;
+            }
+        }
 
-    .rating {
-        margin: 0 auto;
-    }
-
-    .price {
-        position: relative;
-        top: 0;
-        right: 0;
-        width: fit-content;
-        margin: 0 auto;
-        margin-top: 1.25rem;
-        margin-bottom: 1.25rem;
+        .actions {
+            flex-wrap: wrap;
+            button:first-child {
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 1rem;
+            }
+            button {
+                flex: 1;
+            }
+        }
     }
 }
