--- a/src/app/pages/editing-menu/editing-menu.component.scss
+++ b/src/app/pages/editing-menu/editing-menu.component.scss
@@ -1,136 +1,3 @@
-.menu-container {
-    padding-top: 6rem;
-    width: 75rem;
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.menu-frame {
-    padding: 1.5rem;
-    border-radius: 1rem;
-    background-color: #1b0020bb;
-    box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
-}
-
-// h2 {
-//     justify-self: center;
-// }
-
-.switch {
-    display: flex;
-    justify-content: center;
-}
-
-.products-button {
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-}
-
-.categories-button {
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-}
-
-.active {
-    background-color: rgba(255, 217, 0, 0.685) !important;
-    box-shadow: 0.063rem 0 1.25rem 0 gold;
-}
-
-// button {
-//     width: fit-content;
-//     padding: 0.5rem 2rem 0.5rem 2rem;
-//     cursor: pointer;
-//     white-space: nowrap;
-//     background-color: rgba(255, 217, 0, 0.253);
-//     border: none;
-//     color: #fff;
-//     height: 2rem;
-//     transition: background-color 0.2s ease-in-out;
-
-//     &:hover {
-//         background-color: rgba(255, 217, 0, 0.397);
-//     }
-
-//     &:active {
-//         background-color: rgba(255, 217, 0, 0.685);
-//     }
-// }
-
-.workspace {
-    width: 100%;
-}
-small {
-    text-align: center;
-}
-form {
-    max-width: 500px;
-    margin: 0 auto;
-    margin-top: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    label {
-        display: flex;
-        flex-direction: column;
-        // width: 90%;
-    }
-    select {
-        // max-width: 10rem;
-        width: 10rem;
-        max-width: 100%;
-    }
-    
-    label:nth-child(4) {
-        width: 100%;
-    }
-    
-}
-
-.list {
-    position: relative;
-    margin-top: 1rem;
-    min-height: 58rem;
-    max-height: 58rem;
-    overflow-y: auto;
-    background-color: #1b00205b;
-
-    .item {
-        position: relative;
-        padding-top: 2rem;
-
-        display: grid;
-        grid-template-columns: 100px auto;
-        gap: 0.5rem;
-
-        // background-color: #1b002000;
-        
-        transition: background-color 0.2s ease-in-out;
-    }
-}
-.list::-webkit-scrollbar {
-    display: none;
-}
-
-
-.image-holder {
-    grid-area: 1/1/2/2;
-    max-width: 100px;
-    aspect-ratio: 1/1;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 1rem;
-
-    img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-.header-desc {
-    grid-area: 1/2/2/3;
-    padding: 0rem 1rem 0rem 1rem;
-}
-
 .price {
     position: absolute;
     top: 1.25rem;
@@ -148,6 +15,7 @@ form {
         background-color: rgba(255, 217, 0, 0.103);
         cursor: default;
     }
+
     button:first-child {
         margin-left: auto;
         border-top-left-radius: 1rem;
@@ -157,26 +25,15 @@ form {
         border-bottom-right-radius: 1rem;
     }
 }
-.item > .actions {
-    grid-area: 2/1/3/3;
-}
 
 .board {
-    min-height: 0;
-
-    margin-top: 2rem;
-
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-  
+
     gap: 4rem;
-    
+
     .item {
-        width: fit-content;
-        border: 1px ridge gold;
-        border-radius: 1rem;
         text-align: center;
         padding-top: 1.5rem;
     }
@@ -185,7 +42,8 @@ form {
         margin: 0;
         margin-bottom: 1rem;
     }
-     button:first-child {
+
+    button:first-child {
         border-radius: 0;
         border-bottom-left-radius: 1rem;
     }
@@ -193,5 +51,46 @@ form {
     button:last-child {
         border-bottom-right-radius: 1rem;
     }
-    
+}
+
+@media screen and (max-width: 600px) {
+    .item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .price {
+            position: relative;
+            top: 0;
+            right: 0;
+            align-self: flex-end;
+        }
+
+        .image-holder {
+            margin: 0;
+            margin-top: 1rem;
+        }
+
+        .header-desc {
+            margin-top: 0;
+            padding-top: 0;
+            h3 {
+                text-align: center;
+            }
+            p {
+                text-align: center;
+            }
+        }
+
+        .actions {
+            flex-wrap: wrap;
+            button:first-child {
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 1rem;
+            }
+            button {
+                flex: 1;
+            }
+        }
+    }
 }
