--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,6 @@
 
 body {
     margin: 0;
-    // overflow-x: hidden;
-    // font-family: "Roboto", Helvetica, Arial, sans-serif;
     background-color: #12001a;
     color: #fff;
 }
@@ -24,6 +22,7 @@ label {
     row-gap: 0.3rem;
     width: fit-content;
 }
+
 input,
 select,
 textarea {
@@ -35,20 +34,35 @@ textarea {
     color: #fff;
     border-radius: 1rem;
 }
+
+textarea {
+    height: 6rem;
+    padding: 0.5rem;
+}
+
+label:has(textarea) {
+    width: 100%;
+}
+
 select {
     padding: 0;
     text-align: center;
     cursor: pointer;
+    width: 10rem;
+    max-width: 100%;
 }
+
 select:focus {
     border-bottom-left-radius: 0rem;
     border-bottom-right-radius: 0rem;
 }
+
 small {
     font-size: 0.65rem;
     white-space: nowrap;
     text-align: center;
 }
+
 button {
     width: fit-content;
     height: 2rem;
@@ -94,21 +108,18 @@ button {
 
     button {
         flex: 1;
-        
-        border: none;
-        
-        height: 2rem;
+
         display: flex;
         justify-content: center;
         align-items: center;
-        
     }
-     p {
+
+    p {
         height: 2rem;
         padding: 0 1rem 0 1rem;
         display: flex;
         align-items: center;
-        
+
         background-color: rgba(255, 217, 0, 0.253);
         border-left: none;
         border-right: none;
@@ -129,17 +140,18 @@ button {
     border-radius: 1rem;
     font-size: 1rem;
 }
+
 .timestamp {
     font-size: 0.7rem;
 }
 
-.dashboard-container {
+.container {
     padding-top: 6rem;
-    width: 75rem;
+    width: 55rem;
     max-width: 95%;
     margin: 0 auto;
 
-    .dashboard-frame {
+    .frame {
         padding: 1.5rem;
         border-radius: 1rem;
         background-color: #1b0020bb;
@@ -149,7 +161,7 @@ button {
 
 .filter {
     margin-top: 1rem;
-   
+
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -162,4 +174,86 @@ button {
 
 .loading {
     text-align: center;
+    align-self: center;
+}
+
+form {
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.switch {
+    display: flex;
+    justify-content: center;
+
+    .left-button {
+        border-top-left-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+    }
+
+    .right-button {
+        border-top-right-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+    }
+
+    .active {
+        background-color: rgba(255, 217, 0, 0.685) !important;
+        box-shadow: 0.063rem 0 1.25rem 0 gold;
+    }
+}
+
+.normal-list {
+    margin-top: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    // min-height: 58rem;
+    // max-height: 58rem;
+    // overflow-y: auto;
+    background-color: #1b00205b;
+
+    .item {
+        position: relative;
+
+        display: grid;
+        grid-template-columns: 100px auto;
+        gap: 0.5rem;
+
+        background-color: #1b002000;
+        border: 1px ridge gold;
+        border-radius: 1rem;
+
+        transition: background-color 0.2s ease-in-out;
+    }
+
+    .image-holder {
+        grid-area: 1/1/3/2;
+        max-width: 100px;
+        width: 75%;
+        aspect-ratio: 1/1;
+        margin: auto;
+
+        overflow: hidden;
+
+        border-radius: 1rem;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .header-desc {
+        grid-area: 1/2/2/3;
+        padding: 2.5rem 1rem 0rem 1rem;
+    }
+
+    .actions {
+        grid-area: 2/1/3/3;
+    }
 }
