--- a/src/app/pages/editing-menu/editing-menu.component.html
+++ b/src/app/pages/editing-menu/editing-menu.component.html
@@ -36,7 +36,7 @@
             <button type="button" (click)="editProduct()">Ändra</button>
         </div>
     </form>
-
+    <app-form-message [success]="success()" [errors]="errors()"></app-form-message>
     <div class="pagination-controls">
         <button class="previous" (click)="previous()">
             <i class="fa-solid fa-arrow-left"></i>
@@ -79,9 +79,6 @@
         </article>
         }
         }
-
-
-
     </div>
 </div>
 } @else {
@@ -96,6 +93,7 @@
             <button type="button" (click)="editCategory()">Ändra</button>
         </div>
     </form>
+    <app-form-message [success]="success()" [errors]="errors()"></app-form-message>
     <div class="pagination-controls">
         <button class="previous" (click)="previous()">
             <i class="fa-solid fa-arrow-left"></i>
