--- a/src/app/pages/editing-menu/editing-menu.component.html
+++ b/src/app/pages/editing-menu/editing-menu.component.html
@@ -58,7 +58,7 @@
             </label>
         </div>
         @if (isLoading()) {
-        <div class="loading-products">
+        <div class="loading">
             Laddar produkter...
         </div>
         } @else {
@@ -105,7 +105,7 @@
     </div>
     <div class="normal-list board">
         @if (isLoading()) {
-        <div class="loading-products">
+        <div class="loading">
             Laddar produkter...
         </div>
         } @else {
