--- a/src/app/pages/editing-menu/editing-menu.component.scss
+++ b/src/app/pages/editing-menu/editing-menu.component.scss
@@ -30,7 +30,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-
+    min-height: 27.75rem;
     gap: 4rem;
 
     .item {
