--- a/src/app/partials/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/partials/sidebar-menu/sidebar-menu.component.scss
@@ -1,10 +1,11 @@
 .sidenav {
-    background: #1B0020;
+    background: #1b0020;
     transition: all 0.5s ease;
     position: fixed;
     z-index: 1;
     top: 0;
     width: 18.5625rem;
+    max-width: 100vw;
     height: 100vh;
     box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
     overflow: hidden;
@@ -16,25 +17,36 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
-    padding: 0.938rem 0.938rem 0 0.938rem;
+    padding-top: 1rem;
     width: 100%;
 }
 .sidenav .logo-container .logo {
-    background: #37003C;
+    background: #37003c;
     text-align: center;
     width: 3rem;
     min-width: 3rem;
+    max-height: 50px;
     border-radius: 0.313rem;
-    padding: 0.313rem;
-    font-size: 24px;
-    font-weight: 900;
+    font-size: 1.3rem;
+    font-weight: 700;
     cursor: pointer;
     border: none;
     color: #fff;
 }
-.sidenav .logo-container .logo-text {
-    margin-left: 1.5rem;
-    font-size: 24px;
+h1 {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    margin-left: 1rem;
+}
+.logo {
+    padding: 0.313rem;
+    margin-left: 1rem;
+}
+.center {
+    margin: 0 auto;
+}
+.sidenav .logo-container {
     font-weight: 700;
     color: #fff;
 }
@@ -53,12 +65,14 @@
 }
 
 .btn-close {
-    margin-right: 1.2rem;
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
 }
 
 .sidenav-nav {
     list-style: none;
-    padding: 0.938rem;
+    padding: 1rem;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -77,6 +91,7 @@
     text-decoration: none;
     border-radius: 0.625rem;
     transition: all 0.3s ease;
+    white-space: nowrap;
 }
 .sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-icon {
     font-size: 22px;
@@ -85,21 +100,24 @@
     text-align: center;
     padding: 12px;
 }
+.center > .sidenav-nav-item .sidenav-nav-link .sidenav-link-icon {
+    margin: 0 auto;
+    padding: 0;
+}
 .sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-text {
     margin-left: 1.5rem;
 }
 .sidenav-nav .sidenav-nav-item:hover .sidenav-nav-link {
-    background-color: #37003C;
-    color: #E6E6E6;
+    background-color: #37003c;
+    color: #e6e6e6;
 }
 
 .sidenav-nav-item:last-child {
-    position: absolute; 
-    bottom: 0;
+    margin-top: auto;
 }
 
 .active {
-    background-color: #37003C;
+    background-color: #37003c;
 }
 .active .sidenav-link-icon,
 .active .sidenav-link-text {
@@ -108,4 +126,36 @@
 
 .hide {
     display: none;
+}
+
+.small-screen {
+    display: none;
+}
+
+@media screen and (max-width: 700px) {
+    .small-screen {
+        z-index: 10;
+        width: 100vw;
+        display: flex;
+        column-gap: 10%;
+
+        align-items: center;
+        position: fixed;
+
+        background-color: #1b0020;
+        box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
+        h1 {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+        button {
+            margin-left: 1rem;
+            border-radius: 0.314rem;
+            justify-self: left;
+            background: #37003c;
+        }
+    }
+    .sidenav-collapsed {
+        width: 0;
+    }
 }
