--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,9 @@ body {
 * {
     font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
-*:focus {
-    box-shadow: 0.063rem 0 1rem 0 gold;
-}
+// *:focus {
+//     box-shadow: 0.063rem 0 1rem 0 gold;
+// }
 
 h2 {
     justify-self: center;
@@ -174,7 +174,7 @@ button {
 
 .loading {
     text-align: center;
-    align-self: center;
+    align-self: top;
 }
 
 form {
@@ -212,9 +212,7 @@ form {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    // min-height: 58rem;
-    // max-height: 58rem;
-    // overflow-y: auto;
+    min-height: 58rem;
     background-color: #1b00205b;
 
     .item {
@@ -256,4 +254,7 @@ form {
     .actions {
         grid-area: 2/1/3/3;
     }
+}
+.normal-list::-webkit-scrollbar {
+    display: none;
 }
