--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -56,6 +56,7 @@
         Laddar användare...
     </div>
     } @else {
+    @if (users().length > 0) {
     @for (item of users(); track $index) {
     <article class="item">
         <div class="image-holder">
@@ -83,5 +84,11 @@
         </div>
     </article>
     }
+    } @else {
+    <div class="loading">
+        Hittade inga användare genom denna sökning.
+    </div>
+    }
+
     }
 </div>
